Adding exception to push permissions for hal admins and hal9000 repo.
- Playing with fork and exit.
- Redirecting all output from pusher script to dev/null for ease of foking. Maybe.
- Switching to MySQL based session storage.
- Remove "remove" feature from envs and servers
- Repo page pagination cleanup.
- Date formating cleanups for consistency.
- Adding contact details to user page. Making permissions list better reflect reality.
- Adding workaround for datetime output weirdness since it sometimes comes as a DateTime and sometimes as a string.
- Started working on a way to audit repo permissions. On a seperate page for now.
- Fixing email log format problem on build failure.
- Fixes to email log notification. Config file addition.
- Formatting fixes. Using array context instead of implode.

--- a/app/templates/admin/deployments.twig
+++ b/app/templates/admin/deployments.twig
@@ -26,14 +26,14 @@
                 <th>Branch</th>
                 <th>Commit</th>
                 <th>Last Push</th>
-                <th>Target Path</th>
+                <!--<th>Target Path</th>-->
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
             {% for deployment in deployments %}
                 {% if deployment.LastPushed %}
-                    {% set lastPush = deployment.LastPushed|date(timezone="America/Detroit") %}
+                    {% set lastPush = deployment.LastPushed|dateHal %}
                 {% else %}
                     {% set lastPush = "never" %}
                 {% endif %}
@@ -45,11 +45,20 @@
                 <tr>
                     <td>{{ deployment.Repository }}</td>
                     <td>{{ deployment.HostName }} ({{ deployment.Environment }})</td>
-                    <td>{{ deployment.CurStatus }}</td>
+                    <td>
+                        {% if deployment.CurStatus == 'Error' %}
+                            <div class="circle circle-red"></div>
+                        {% elseif deployment.CurStatus == 'Deployed' %}
+                            <div class="circle circle-green"></div>
+                        {% else %}
+                            <div class="circle circle-orange"></div>
+                        {% endif %}
+                        {{ deployment.CurStatus }}
+                    </td>
                     <td>{{ deployment.CurBranch }}</td>
                     <td>{% autoescape false %}{{ curCommit }}{% endautoescape %}</td>
                     <td>{{ lastPush }}</td>
-                    <td>{{ deployment.TargetPath }}</td>
+                    <!--<td>{{ deployment.TargetPath }}</td>-->
                     <td><a href="/admin/deployments/{{ deployment.DeploymentId }}/remove">Remove</a></td>
                 </tr>
             {% endfor %}
