--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -39,6 +39,10 @@
             <div class="branding-container">
                 <div class="logo">
                     <a href="/" class="hal">
+                        <img src="/img/eye.png" style="width: 4.5em;" alt="haleye">
+                    </a>
+                    <!--
+                        // bad cpu hogging hardware accelorated styles!
                         <div class="metal active">
                             <div class="light">
                                 <div class="glowing-red">
@@ -46,8 +50,10 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+
+                    -->
                     <h1>HAL 9000</h1>
+
                 </div>
 
                 <h2 class="zeta sub-heading">Child of Codepushinator, QBERT and Github Enterprise</h2>
