--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -63,8 +63,8 @@
                 <nav role="navigation">
                     <ul class="nav--main mbn">
                         <li><a href="/a" title="project groups">Repository Groups</a></li>
-                        <li><a href="/u/{{ commonId }}">Profile Page</a></li>
-                        {% if isAdmin %}
+                        <li><a href="/u/{{ account.commonId }}">Profile Page</a></li>
+                        {% if isUserAdmin(account) %}
                             <li><a href="/admin/repositories" title="admin dashboard">Admin Dashboard</a></li>
                         {% endif %}
                         <li><a href="/logout" title="logout">Logout</a></li>
@@ -113,5 +113,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
     <script src="/js/main.min.js"></script>
+    <script src="/js/add-repository.js"></script>
     {% block pageScript %}{% endblock %}
 {% endblock %}
