--- a/public/css/matt.css
+++ b/public/css/matt.css
@@ -88,3 +88,24 @@
     /*background: #fff5f5;*/
     border-left: 5px solid #cd9c00;
 }
+
+.js-form-toggle {
+    display: block;
+}
+
+.js-form-error {
+    color: red;
+    margin-bottom: 0;
+}
+
+.select-input {
+    width: 100%;
+    font-size: 1.11111em;
+    line-height: 1.35em;
+    padding: 0.675em;
+    background: #f5f5f5;
+    -webkit-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
+    -moz-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
+    box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
+    border-radius: 4px;
+}
