--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -110,9 +110,6 @@
 {% endblock %}
 
 {% block script %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
-    <script src="/js/main.min.js"></script>
-    <script src="/js/add-repository.js"></script>
+<script data-main="/js/main" src="/js/vendor/require-2.1.11.min.js"></script>
     {% block pageScript %}{% endblock %}
 {% endblock %}
