--- a/app/templates/sync-code.twig
+++ b/app/templates/sync-code.twig
@@ -13,41 +13,59 @@
         <form method="post" action="">
             <ul class="form-fields">
                 <li>
+                    <h4>Branches</h4>
                     <ul class="check-list">
                     {% for branch in branches %}
                         <li>
-                            <input type="radio" name="commitish" value="{{ branch.ref }}">
-                            <label>{{ branch.name }} (<a href="http://git/{{ repo.GithubUser }}/{{ repo.GithubRepo }}/tree/{{ branch.name }}">{{ branch.object.sha[:7] }}</a>)</label>
+                            <input id="{{ branch.object.sha }}-{{ branch.name }}" type="radio" name="commitish" value="{{ branch.ref }}">
+                            <label for="{{ branch.object.sha }}-{{ branch.name }}">
+                                {{ branch.name }} (<a href="http://git/{{ repo.GithubUser }}/{{ repo.GithubRepo }}/tree/{{ branch.name }}">{{ branch.object.sha[:7] }}</a>)
+                            </label>
                         </li>
                     {% endfor %}
                     </ul>
                 </li>
+
+                {% if tags %}
                 <li>
+                    <h4>Releases</h4>
                     <ul class="check-list">
                     {% for tag in tags %}
                         <li>
-                            <input type="radio" name="commitish" value="{{ tag.ref }}">
-                            <label>[tag] {{ tag.name }} (<a href="http://git/{{ repo.GithubUser }}/{{ repo.GithubRepo }}/tree/{{ tag.name }}">{{ tag.object.sha[:7] }}</a>)</label>
+                            <input id="{{ tag.object.sha }}-{{ tag.name }}" type="radio" name="commitish" value="{{ tag.ref }}">
+                            <label for="{{ tag.object.sha }}-{{ tag.name }}">
+                                {{ tag.name }} (<a href="http://git/{{ repo.GithubUser }}/{{ repo.GithubRepo }}/tree/{{ tag.name }}">{{ tag.object.sha[:7] }}</a>)
+                            </label>
                         </li>
                     {% endfor %}
                     </ul>
                 </li>
+                {% endif %}
+
                 <li>
+                    <h4>Commit</h4>
                     <ul class="check-list form-wrapper">
                         <li>
-                            <input type="radio" name="commitish" value="(no branch)">
-                            <label>Push specific commit ID:</label>
+                            <input id="push-commit" type="radio" name="commitish" value="(no branch)">
+                            <label for="push-commit">Push specific commit ID:</label>
                             <input class="text-input" type="text" name="sha">
                         </li>
                     </ul>
                 </li>
 
-                <h3>To the following servers/paths:</h3>
-                {% for dep in deps %}
-                <ul>
-                    <li>{{ dep.HostName }}:{{ dep.TargetPath }}{% if dep.LastPushed %} on {{ dep.LastPushed|date(timezone="America/Detroit") }}{% endif %}</li>
-                </ul>
-                {% endfor %}
+                <li>
+                    <h4>Pull Requests</h4>
+                    <a id="githubPullRequests" data-user="{{ repo.GithubUser }}" data-repo="{{ repo.GithubRepo }}">Load list from GitHub</a>
+                </li>
+
+                <li>
+                    <h3>To the following servers/paths:</h3>
+                    {% for dep in deps %}
+                    <ul>
+                        <li>{{ dep.HostName }}:{{ dep.TargetPath }}{% if dep.LastPushed %} on {{ dep.LastPushed|date(timezone="America/Detroit") }}{% endif %}</li>
+                    </ul>
+                    {% endfor %}
+                </li>
 
                 <li>
                     <input class="btn" type="submit" value="Sync Code" name="submit">
