--- a/public/css/matt.css
+++ b/public/css/matt.css
@@ -104,8 +104,34 @@
     line-height: 1.35em;
     padding: 0.675em;
     background: #f5f5f5;
-    -webkit-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
-    -moz-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
-    box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999;
     border-radius: 4px;
+}
+
+.pr-selection {
+    background: #f5f5f5;
+    border:1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    padding: .5em;
+}
+
+.pr-selection code {
+    font-size: 75%;
+}
+
+.pr-selection p {
+    margin-bottom: auto;
+}
+
+.pr-selection span {
+    font-style: bold;
+    text-transform: uppercase;
+}
+
+.pr-selection span.closed {
+    color: #c00000;
+}
+
+.pr-selection span.open {
+    color: #00c92c;
 }
